# nifi_to_databricks

./: .env.example  .exception_metrics.json  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CLAUDE.md  MIGRATION_PLAN.md  README.md  app.yaml  app.yaml.template  app.yml  classification_overrides.yaml  classification_rules.yaml  clear_cached_pattern.py  complex_workflow_analysis.json  convert_nifi_using_agent.py  find_processor_on_canvas.py  init_delta_tables.sql  migration_nifi_patterns.json  model_serving_utils.py  nifi_databricks_agent.py  nifi_migration_notebook.py  nifi_workflow_metadata_analyzer.ipynb  pyproject.toml  requirements.txt  run batch classification.ipynb  run_tests.py  streamlit_app.py  streamlit_app.yaml  test_architecture_decision.py  test_chunking.py  test_intelligence.py  test_llm_generation.py  test_xml_parsing.py  validate_table_extraction.py  verify_intelligence_expectations.py
agents/: __init__.py  agent.py
config/: __init__.py  settings.py
debug_final_test/final_properties_test/: ICN8_BRS_Feedback_workflow_analysis.json  MIGRATION_GUIDE.md  nifi_asset_catalog.json  nifi_asset_summary.md
debug_fix_test/debug_fixed_stars/: ICN8_BRS_Feedback_workflow_analysis.json  MIGRATION_GUIDE.md  nifi_asset_catalog.json  nifi_asset_summary.md
debug_star_issue/debug_star_test/: MIGRATION_GUIDE.md  json_log_process_pipeline_workflow_analysis.json  nifi_asset_catalog.json  nifi_asset_summary.md
debug_test/debug_properties_test/: ICN8_BRS_Feedback_workflow_analysis.json  MIGRATION_GUIDE.md  nifi_asset_catalog.json  nifi_asset_summary.md
debug_type_test/debug_type_issue/: MIGRATION_GUIDE.md  (+3 more)
docs/: classification_feature_spec.md  classification_rules.md  migration_classifier_plan.md  migration_improvement_plan_S3.md  mypy_strictness_guide.md  parallel_flow_analysis_EI.md  session_2025-10-16_phase1_complete.md  session_2025-10-17_phase2_complete.md
nifi_pipeline_file/: json_log_process_pipeline.xml  nifi_pipeline_eric_1.xml  nifi_pipeline_eric_embed_groups.xml
notebooks/: create_metadata_tables.ipynb  load_metadata_tables.ipynb
registry/: __init__.py  pattern_registry.py
schemas/: nifi_metadata.py
scripts/: README.md  batch_table_extraction.py  databricks_batch_script_extraction.py  databricks_batch_table_extraction.py  exception_metrics.py  export_external_filenames.py  export_external_filenames_usage.txt  mypy_progress.sh  setup_dev.sh
streamlit_app/: Dashboard.py  app.py  requirements.txt
tests/: README.md  __init__.py  conftest.py  test_catalog_validation.py  test_declarative_classifier.py  test_group_profiles.py  test_integration.py  test_migration_tools.py  test_migration_tools_corrected.py  test_migration_tools_fixed.py  test_migration_tools_standalone.py  test_processor_batches.py  test_processor_catalog.py  test_processor_payloads.py  test_snippet_store.py  test_variable_extraction.py
tools/: __init__.py  analysis_tools.py  asset_discovery_tools.py  asset_extraction.py  chunking_tools.py  connection_analysis.py  declarative_classifier.py  dependency_extraction.py  dlt_tools.py  eval_tools.py  generator_tools.py  improved_classifier.py  improved_pruning.py  job_tools.py  migration_guide_generator.py  migration_orchestrator.py  migration_tools.py  networkx_complete_flow_analysis.py  nifi_intelligence.py  nifi_processor_classifier_tool.py  nifi_table_lineage.py  parallel_flow_detector.py  pattern_tools.py  processor_features.py  pruning_tools.py  reporting.py  script_extraction.py  simple_table_lineage.py  simplified_migration.py  sql_extraction.py  table_extraction.py  table_operations.py  variable_extraction.py  xml_tools.py
utils/: __init__.py  file_ops.py  nifi_analysis_utils.py  response_utils.py  workflow_summary.py  xml_preprocess.py  xml_utils.py
(+76 files in other folders)
